--- a/AddHosts.yaml
+++ b/AddHosts.yaml
@@ -1,73 +1,73 @@
 hosts:
   #设置要代理的域名
-  www.nivod4.tv: 127.0.0.1
-  godamanga.com: 127.0.0.1
-  baozimh.org: 127.0.0.1
-  www.stnn.cc: 127.0.0.1
-  www.agedm.tv: 127.0.0.1
-  www.v2ex.com: 127.0.0.1
-  www.twitter.com: 127.0.0.1
-  mddm.tv: 127.0.0.1
-  dmla1.com: 127.0.0.1
-  hanpian.tv: 127.0.0.1
-  88dmw.com: 127.0.0.1
-  agemys.org: 127.0.0.1
-  dmand5: 127.0.0.1
-  mxdm9: 127.0.0.1
-  www.88dmw.com: 128.2.0.1
-  www.mxdm9.com: 128.2.0.1
-  www.anfuns.cc: 128.2.0.1
-  eacg.net: 128.2.0.1
-  www.dmla1.com: 128.2.0.1
-  www.kktv.me: 128.2.0.1
-  m.agemys.org: 128.2.0.1
-  www.yydm1.cc: 128.2.0.1
-  www.haitu.tv: 128.2.0.1
-  www.mddm.tv: 128.2.0.1
-  buding3.com: 128.2.0.1
-  www.g916.com: 128.2.0.1
-  tw.tv.yahoo.com: 128.2.0.1
-  ani.gamer.com.tw: 128.2.0.1
-  www.hanpian.tv: 128.2.0.1
-  ac.qq.com: 128.2.0.1
-  play.google.com: 128.2.0.1
-  www.extrabux.com: 128.2.0.1
-  www.dealmoon.ca: 128.2.0.1
-  dm233.cc.atlaq.com: 128.2.0.1
-  akibamarket.com: 128.2.0.1
-  feijisu4.com: 128.2.0.1
-  m.jpbeta.net: 128.2.0.1
-  www.iq.com: 128.2.0.1
-  shouyou.3dmgame.com: 128.2.0.1
-  www.acgfans.me: 128.2.0.1
-  halihali7.com: 128.2.0.1
-  www.857dmz.com: 128.2.0.1
-  www.martinku.cn: 128.2.0.1
-  dongmanzaixiankan.com: 128.2.0.1
-  www.acgvod.com: 128.2.0.1
-  waptv.sogou.com: 128.2.0.1
-  www.7kdm.com: 128.2.0.1
-  www.mandaowang.com: 128.2.0.1
-  virtualsc.org: 128.2.0.1
-  m.pangzitv.com: 128.2.0.1
-  www.pc6.com: 128.2.0.1
-  www.kkdm2.com: 128.2.0.1
-  www.916dm.com: 128.2.0.1
-  www.jkxuexi.com: 128.2.0.1
-  acgfta.com: 128.2.0.1
-  www.histar.tv: 128.2.0.1
-  ziziyy1.com: 128.2.0.1
-  www.dongmanwan.com: 128.2.0.1
-  www.cartoonmad.com: 128.2.0.1
-  www.canva.cn: 128.2.0.1
-  twitter.com: 128.2.0.1
-  www.ncbi.nlm.nih.gov: 128.2.0.1
-  www.acgbox.link: 128.2.0.1
-  www.qdm66.com: 128.2.0.1
-  www.baidu.com: 128.2.0.1
-  weibo.com: 128.2.0.1
-  www.ailabtools.com: 128.2.0.1
-
+  www.nivod4.tv: 192.168.45.67
+  godamanga.com: 192.168.45.67
+  baozimh.org: 192.168.45.67
+  www.stnn.cc: 192.168.45.67
+  www.agedm.tv: 192.168.45.67
+  www.v2ex.com: 192.168.45.67
+  www.twitter.com: 192.168.45.67
+  mddm.tv: 192.168.45.67
+  dmla1.com: 192.168.45.67
+  hanpian.tv: 192.168.45.67
+  88dmw.com: 192.168.45.67
+  agemys.org: 192.168.45.67
+  dmand5: 192.168.45.67
+  mxdm9: 192.168.45.67
+  www.88dmw.com: 192.168.45.67
+  www.mxdm9.com: 192.168.45.67
+  www.anfuns.cc: 192.168.45.67
+  eacg.net: 192.168.45.67
+  www.dmla1.com: 192.168.45.67
+  www.kktv.me: 192.168.45.67
+  m.agemys.org: 192.168.45.67
+  www.yydm1.cc: 192.168.45.67
+  www.haitu.tv: 192.168.45.67
+  www.mddm.tv: 192.168.45.67
+  buding3.com: 192.168.45.67
+  www.g916.com: 192.168.45.67
+  tw.tv.yahoo.com: 192.168.45.67
+  ani.gamer.com.tw: 192.168.45.67
+  www.hanpian.tv: 192.168.45.67
+  ac.qq.com: 192.168.45.67
+  play.google.com: 192.168.45.67
+  www.extrabux.com: 192.168.45.67
+  www.dealmoon.ca: 192.168.45.67
+  dm233.cc.atlaq.com: 192.168.45.67
+  akibamarket.com: 192.168.45.67
+  feijisu4.com: 192.168.45.67
+  m.jpbeta.net: 192.168.45.67
+  www.iq.com: 192.168.45.67
+  shouyou.3dmgame.com: 192.168.45.67
+  www.acgfans.me: 192.168.45.67
+  halihali7.com: 192.168.45.67
+  www.857dmz.com: 192.168.45.67
+  www.martinku.cn: 192.168.45.67
+  dongmanzaixiankan.com: 192.168.45.67
+  www.acgvod.com: 192.168.45.67
+  waptv.sogou.com: 192.168.45.67
+  www.7kdm.com: 192.168.45.67
+  www.mandaowang.com: 192.168.45.67
+  virtualsc.org: 192.168.45.67
+  m.pangzitv.com: 192.168.45.67
+  www.pc6.com: 192.168.45.67
+  www.kkdm2.com: 192.168.45.67
+  www.916dm.com: 192.168.45.67
+  www.jkxuexi.com: 192.168.45.67
+  acgfta.com: 192.168.45.67
+  www.histar.tv: 192.168.45.67
+  ziziyy1.com: 192.168.45.67
+  www.dongmanwan.com: 192.168.45.67
+  www.cartoonmad.com: 192.168.45.67
+  www.canva.cn: 192.168.45.67
+  twitter.com: 192.168.45.67
+  www.ncbi.nlm.nih.gov: 192.168.45.67
+  www.acgbox.link: 192.168.45.67
+  www.qdm66.com: 192.168.45.67
+  www.baidu.com: 192.168.45.67
+  weibo.com: 192.168.45.67
+  www.ailabtools.com: 192.168.45.67
+  b.faloo.com: 192.168.45.67
 
 
 exclude_files:
